--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,11 @@
     }
 }
 
+.hide-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
